ghostlinklabs/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghostlink
  labels:
    name: ghostlink
    app: ghostlink-system
